--- a/module-3/Trinh__Mod3_3.css
+++ b/module-3/Trinh__Mod3_3.css
@@ -18,17 +18,18 @@ h3
 {
     font-weight: 500;
 }
-ol
+#left
 {
     border: solid;
     border-width: 1px;
     border-color: red;
     border-radius: 15px;
     font-weight: 300;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
+    float :left ;
+    width: 45%;
 }
-ul
+#right
 {
     border: dashed;
     border-color: red;
@@ -38,6 +39,8 @@ ul
     list-style: upper-roman;
     list-style-position:inside;
     font-weight: 300;
+    float: right;
+    width: 45%;
 }
 a:hover
 {
